--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,71 @@
 {
   "version": 1,
-  "projects": {},
+  "projects": {
+    "test-plugin": {
+      "root": "libs/test-plugin",
+      "sourceRoot": "libs/test-plugin/src",
+      "projectType": "library",
+      "schematics": {},
+      "architect": {
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["libs/test-plugin/**/*.ts"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/test-plugin/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "build": {
+          "builder": "@nrwl/node:package",
+          "options": {
+            "outputPath": "dist/libs/test-plugin",
+            "tsConfig": "libs/test-plugin/tsconfig.lib.json",
+            "packageJson": "libs/test-plugin/package.json",
+            "main": "libs/test-plugin/src/index.ts",
+            "assets": [
+              "libs/test-plugin/*.md",
+              {
+                "input": "./libs/test-plugin/src",
+                "glob": "**/*.!(ts)",
+                "output": "./src"
+              },
+              {
+                "input": "./libs/test-plugin",
+                "glob": "collection.json",
+                "output": "."
+              },
+              {
+                "input": "./libs/test-plugin",
+                "glob": "builders.json",
+                "output": "."
+              }
+            ]
+          }
+        }
+      }
+    },
+    "test-plugin-e2e": {
+      "projectType": "application",
+      "root": "apps/test-plugin-e2e",
+      "sourceRoot": "apps/test-plugin-e2e/src",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/nx-plugin:e2e",
+          "options": {
+            "target": "test-plugin:build",
+            "npmPackageName": "@nx-test-schematics/test-plugin",
+            "pluginOutputPath": "dist/libs/test-plugin",
+            "jestConfig": "apps/test-plugin-e2e/jest.config.js"
+          }
+        }
+      }
+    }
+  },
   "cli": {
     "defaultCollection": "@nrwl/workspace"
   }
