--- a/package.json
+++ b/package.json
@@ -31,15 +31,26 @@
   "dependencies": {},
   "devDependencies": {
     "@angular/cli": "~10.1.3",
-    "@nrwl/tao": "10.4.15",
     "@nrwl/cli": "10.4.15",
+    "@nrwl/eslint-plugin-nx": "10.4.15",
+    "@nrwl/jest": "10.4.15",
+    "@nrwl/node": "10.4.15",
+    "@nrwl/nx-plugin": "10.4.15",
+    "@nrwl/tao": "10.4.15",
     "@nrwl/workspace": "10.4.15",
+    "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
     "eslint": "7.10.0",
-    "typescript": "~4.0.3",
-    "prettier": "2.1.2"
+    "eslint-config-prettier": "6.0.0",
+    "jest": "26.2.2",
+    "prettier": "2.1.2",
+    "ts-jest": "26.4.0",
+    "ts-node": "~7.0.0",
+    "tslib": "^2.0.0",
+    "tslint": "~6.0.0",
+    "typescript": "~4.0.3"
   }
 }
