--- a/package.json
+++ b/package.json
@@ -23,34 +23,34 @@
     "format:write": "nx format:write",
     "format:check": "nx format:check",
     "update": "nx migrate latest",
-    "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "workspace-generator": "nx workspace-generator"
   },
   "private": true,
   "dependencies": {},
   "devDependencies": {
     "@angular/cli": "~10.1.3",
-    "@nrwl/cli": "10.4.15",
-    "@nrwl/eslint-plugin-nx": "10.4.15",
-    "@nrwl/jest": "10.4.15",
-    "@nrwl/node": "10.4.15",
-    "@nrwl/nx-plugin": "10.4.15",
-    "@nrwl/tao": "10.4.15",
-    "@nrwl/workspace": "10.4.15",
+    "@nrwl/cli": "11.5.2",
+    "@nrwl/eslint-plugin-nx": "11.5.2",
+    "@nrwl/jest": "11.5.2",
+    "@nrwl/node": "11.5.2",
+    "@nrwl/nx-plugin": "11.5.2",
+    "@nrwl/tao": "11.5.2",
+    "@nrwl/workspace": "11.5.2",
     "@types/jest": "26.0.8",
-    "@types/node": "~8.9.4",
+    "@types/node": "12.12.38",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
-    "eslint-config-prettier": "6.0.0",
+    "eslint-config-prettier": "8.1.0",
     "jest": "26.2.2",
-    "prettier": "2.1.2",
+    "prettier": "2.2.1",
     "ts-jest": "26.4.0",
-    "ts-node": "~7.0.0",
+    "ts-node": "9.1.1",
     "tslib": "^2.0.0",
-    "tslint": "~6.0.0",
+    "tslint": "6.1.3",
     "typescript": "~4.0.3"
   }
 }
